crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__changelog__group-empty-members-empty__group.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: normalize_commit_links(&contents)
---
# Changelog

## [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/v1.0.1) (2026-04-06)

Grouped release for `sdk`.

### Changed

- **No package-specific changes were recorded; group `sdk` was updated to 1.0.1.**
